--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/service-worker": "~8.2.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "ngx-bootstrap": "^5.1.2",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
