--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0",
+    "@agm/core": "^1.0.0",
+    "@angular/animations": "^8.2.7",
+    "@angular/cdk": "^8.2.0",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
@@ -22,10 +24,14 @@
     "@angular/router": "~8.2.0",
     "@angular/service-worker": "~8.2.0",
     "bootstrap": "^4.3.1",
+    "highcharts": "^7.2.0",
+    "highcharts-angular": "^2.4.0",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "ng-circle-progress": "^1.5.1",
     "ngx-bootstrap": "^5.1.2",
     "popper": "^1.0.1",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
