--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
+    "@angular/material": "^8.2.0",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/pwa": "^0.803.5",
     "@angular/router": "~8.2.0",
     "@angular/service-worker": "~8.2.0",
     "bootstrap": "^4.3.1",
+    "hammerjs": "^2.0.8",
     "highcharts": "^7.2.0",
     "highcharts-angular": "^2.4.0",
     "jquery": "^3.4.1",
