--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "hammerjs": "^2.0.8",
     "highcharts": "^7.2.0",
     "highcharts-angular": "^2.4.0",
-    "jquery": "^3.4.1",
+    "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
     "moment": "^2.24.0",
     "ng-circle-progress": "^1.5.1",
     "ng-maphilight": "^1.0.1",
     "ngx-bootstrap": "^5.1.2",
+    "pdfmake": "^0.1.60",
     "popper": "^1.0.1",
     "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.15.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
